// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection form test should display successfull submission screen 1`] = `
<StandardPage
  title="Add a missing collection"
>
  <form>
    <NavigationDialogBox
      when={false}
    />
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          help={Object {}}
          title="Add a missing collection"
        >
          <WithStyles(Grid)
            container={true}
            spacing={24}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={[Function]}
                disabled={false}
                locale={
                  Object {
                    "label": "Member of this community",
                    "placeholder": "Select a community this collection is a member of",
                  }
                }
                name="fez_record_search_key_ismemberof"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Alert)
          message="New work has been saved successfully."
          title="Success"
          type="done"
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
    >
      <WithStyles(Grid)
        item={true}
        sm={true}
        xs={false}
      />
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Return to the homepage
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[MockFunction]}
          variant="contained"
        >
          Add collection
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`Collection form test should render form 1`] = `
<StandardPage
  title="Add a missing collection"
>
  <form>
    <NavigationDialogBox
      when={true}
    />
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          help={Object {}}
          title="Add a missing collection"
        >
          <WithStyles(Grid)
            container={true}
            spacing={24}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={[Function]}
                disabled={false}
                locale={
                  Object {
                    "label": "Member of this community",
                    "placeholder": "Select a community this collection is a member of",
                  }
                }
                name="fez_record_search_key_ismemberof"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
    >
      <WithStyles(Grid)
        item={true}
        sm={true}
        xs={false}
      />
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Return to the homepage
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[MockFunction]}
          variant="contained"
        >
          Add collection
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;
